--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "livePreview.defaultPreviewPath": "/web/projeto_1/index.html"
+  "livePreview.defaultPreviewPath": "/web/projeto_1/Desafios/desafio02/index.html"
 }
